--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "~4.16.0",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "querystring": "~0.2.0",
