--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.2",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server",
     "validate": "npm run lint && npm run check-format",
     "lint": "eslint --ignore-path .gitignore .",
@@ -18,7 +19,6 @@
     "express": "~4.16.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "querystring": "~0.2.0",
     "request": "~2.83.0"
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^7.0.0",
+    "nodemon": "^2.0.12",
     "prettier": "^2.3.2"
   }
 }
